Retarget cxf-core to Java 8 and version it as 3.6.12-wso2v1
Replace Java 9+ only constructs in cxf-core with Java 8 equivalents so the
module compiles and runs under release 8, and set the core build chain to
3.6.12-wso2v1.

Build with: mvn clean install -Dcxf.jdk.version=8